Update on Overleaf.

--- a/ref/fire.bib
+++ b/ref/fire.bib
@@ -53,8 +53,8 @@ call=" SD421 .P94 1996     auraria"
   author       = {{Joint Economic Committee Democrats}},
   year = {2023},
   month = {10},
-  title        = {Climate-exacerbated wildfires cost the U.S. between $394
-to $893 billion each year in economic costs and damages},
+  title        = {Climate-exacerbated wildfires cost the {U.S.} between {\$394}
+to {\$893} billion each year in economic costs and damages},
   howpublished = {\url{https://www.jec.senate.gov/public/_cache/files/9220abde-7b60-4d05-ba0a-8cc20df44c7d/jec-report-on-total-costs-of-wildfires.pdf}},
   note         = {Accessed: July 3, 2024}
 }
@@ -76,7 +76,7 @@ to $893 billion each year in economic costs and damages},
 @article{Richardson-2022-GIW,
   author = {Richardson, Doug and Black, Amanda S. and Irving, Damien and Matear, Richard J. and Monselesan, Didier P. and Risbey, James S. and Squire, Dougal T. and Tozer, Carly R.},
   title = {Global increase in wildfire potential from compound fire weather and drought},
-  journal = {npj Climate and Atmospheric Science},
+  journal = {{NPJ} Climate and Atmospheric Science},
   volume = {5},
   number = {1},
   pages = {23},
@@ -158,7 +158,7 @@ to $893 billion each year in economic costs and damages},
 @misc{OpenWFM-2024-HTD,
   author       = {OpenWFM},
   institution = {Open Wildland Fire Modeling eCommunity},
-  title        = {How to diagnose fuel properties in WRF-SFIRE},
+  title        = {How to diagnose fuel properties in {WRF-SFIRE}},
   howpublished = {\url{https://wiki.openwfm.org/wiki/How_to_diagnose_fuel_properties_in_WRF-SFIRE}},
   note         = {Accessed: July 3, 2024}
 }
@@ -187,4 +187,31 @@ to $893 billion each year in economic costs and damages},
   title        = {Geographic Area Coordination Centers - About Us},
   howpublished = {\url{https://gacc.nifc.gov/admin/about_us/about_us.htm}},
   note         = {Accessed: July 3, 2024}
+}
+
+@article{Williams-2013-EOH,
+title = {Exploring the onset of high-impact mega-fires through a forest land management prism},
+journal = {Forest Ecology and Management},
+volume = {294},
+pages = {4-10},
+year = {2013},
+note = {The Mega-fire reality},
+issn = {0378-1127},
+doi = {https://doi.org/10.1016/j.foreco.2012.06.030},
+url = {https://www.sciencedirect.com/science/article/pii/S0378112712003593},
+author = {Jerry Williams},
+keywords = {Mega-fires, Wildland fire protection, Drought effects},
+abstract = {In the modern era, high-impact mega-fires are unprecedented for the suppression costs, property losses, natural resource damages, and loss of life often involved. For a number of years, these extraordinary wildfires have been increasing in number and in severity. They affect countries around the world, including those with enormous firefighting capabilities. High-impact mega-fires are frustrating efforts to provide for public safety, slow rates of deforestation, sequester carbon and reduce black carbon emissions. Despite more determined bidding, attempts to match increasing wildfire threats with greater suppression force have not stemmed climbing mega-fire trends. Yet, the majority of after-action reviews, reports, and commissions continue to weight recommendations to correcting emergency response deficiencies, generally through a fire operations lens. This paper explores the mega-fire phenomenon through a forest land management prism. It is an early attempt to focus on the contributory factors that may set the stage for high-impact mega-fires. The paper draws on the results from two coarse-filter overviews of high-impact mega-fires from around the world and the authors’ firsthand experiences dealing with others in the United States. Drought and fire exclusion policies have been implicated in the large fire problem. However, several high-impact mega-fires can be further traced to land management decisions that resulted in dense forest conditions with high biomass and fuel build-ups over extensive areas. As droughts have intensified, more of these accumulated fuels have become available to burn at intensities that exceed suppression capabilities. In contrast, some places have managed to largely avoid high-impact mega-fires. State and federal lands in Florida and Crown lands in Western Australia have better aligned policies and practices with the disturbance regimes that define the forested landscapes that they protect. They use prescribed fire at appropriate intensities, intervals, and scales to reduce fuels as the means to protect people, maintain forest resilience, ensure biodiversity, and increase margins of suppression effectiveness. Forest land management policies and practices that, by design or by default, result in greater volumes of fuel and rely on suppression capabilities to maintain these conditions may no longer be sustainable as droughts deepen and become more widespread. This paper suggests that adapting wildland fire management programs, forest land management policies, and the current regulatory framework to the reality of warmer, drier climate patterns will be essential in reducing mega-fire risks. Protecting fire-prone landscapes can no longer rely on suppression alone; protection will become more dependent on the management of forests where high-impact mega-fires incubate.}
+}
+
+@article{Cartier-2022-UFQ,
+    author={Cartier,Kimberly},
+    year={2022},
+    title={U.S. Fires Quadrupled in Size, Tripled in Frequency in 20 Years},
+    journal={Eos (Washington, D.C.)},
+    volume={103},
+    abstract={Changes including intensifying drought, expansion into burnable land, and an increase in human-caused ignitions have led to a shift in fire patterns.},
+    isbn={2324-9250},
+    language={English},
+    howpublished = {\url{https://eos.org/articles/u-s-fires-quadrupled-in-size-tripled-in-frequency-in-20-years}}
 }
