--- a/ref/fmc.bib
+++ b/ref/fmc.bib
@@ -258,6 +258,23 @@ year = {2000},
 doi = {10.1139/x00-032},
 }
 
+@incollection{Mandel-2023-BFM,
+author="J. Mandel and J. Hirschi and  A. K. Kochanski and A. Farguell 
+and J. Haley and D. V. Mallia and B. Shaddy and A. A. Oberai and K. A. Hilburn",
+title="Building a Fuel Moisture Model for
+the Coupled Fire-Atmosphere Model {WRF-SFIRE} from Data:
+{F}rom {K}alman Filters to Recurrent Neural Networks",
+booktitle="SNA'23 Seminar on Numerical Analysis",
+subtitle="Ostrava, Czech Republic, January 23--27, 2023",
+year="2023",
+note="\url{https://www.ugn.cas.cz/event/2023/sna},
+also available as arXiv:2301.05427",
+pages="52--55",
+isbn="978-80-86407-85-2",
+publisher="Institute of Geonics of the Czech Academy of Sciences",
+doi="10.48550/arXiv.2301.05427"
+}
+
 @incollection{Nelson-2001-WRF,
 author="Nelson~Jr., Ralph M.",
 year="2001",
@@ -294,7 +311,7 @@ isbn="978-0123866608"
 
 @misc{Blaylock-2023-SPA,
   author       = {Blaylock},
-  title        = {SynopticPy: Synoptic API for Python},
+  title        = {SynopticPy: Synoptic {API} for {Python}},
   year         = {2023},
   version      = {2023.3.0},
   howpublished = {\url{https://github.com/blaylockbk/SynopticPy}},
@@ -303,7 +320,7 @@ isbn="978-0123866608"
 
 @misc{Synoptic-2024-SWA,
   author = {Synoptic},
-  title        = {Synoptic Weather API},
+  title        = {Synoptic Weather {API}},
   institution = {Synoptic},
   howpublished = {\url{https://synopticdata.com/weatherapi}},
   note = {Computer software}
