--- a/ref/ml.bib
+++ b/ref/ml.bib
@@ -1,10 +1,22 @@
-@misc{Ebert-2021-GCL,
-      title={CIRA Guide to Custom Loss Functions for Neural Networks in Environmental Sciences -- Version 1}, 
-      author={Imme Ebert-Uphoff and Ryan Lagerquist and Kyle Hilburn and Yoonjin Lee and Katherine Haynes and Jason Stock and Christina Kumler and Jebb Q. Stewart},
-      year={2021},
-      eprint={2106.09757},
-      archivePrefix={arXiv},
-      primaryClass={cs.LG}
+@article{Ebert-2021-GCL,
+  author       = {Imme Ebert{-}Uphoff and
+                  Ryan Lagerquist and
+                  Kyle Hilburn and
+                  Yoonjin Lee and
+                  Katherine Haynes and
+                  Jason Stock and
+                  Christina Kumler and
+                  Jebb Q. Stewart},
+  title        = {{CIRA} Guide to Custom Loss Functions for Neural Networks in Environmental Sciences - Version 1},
+  journal      = {CoRR},
+  volume       = {abs/2106.09757},
+  year         = {2021},
+  url          = {https://arxiv.org/abs/2106.09757},
+  eprinttype    = {arXiv},
+  eprint       = {2106.09757},
+  timestamp    = {Tue, 29 Jun 2021 16:55:04 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2106-09757.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{Buch-2022-SML,
@@ -25,7 +37,7 @@ author = {Lu, Yang and WEI, Chunzhu},
 year = {2021},
 month = {01},
 pages = {145410},
-title = {Evaluation of microwave soil moisture data for monitoring live fuel moisture content (LFMC) over the coterminous United States},
+title = {Evaluation of microwave soil moisture data for monitoring live fuel moisture content ({LFMC}) over the coterminous United States},
 volume = {771},
 journal = {Science of The Total Environment},
 doi = {10.1016/j.scitotenv.2021.145410}
@@ -81,7 +93,7 @@ doi = {10.1088/2632-2153/aba480}
 
 @Article{Schreck-2023-MLV,
 AUTHOR = {Schreck, John S. and Petzke, William and Jiménez, Pedro A. and Brummet, Thomas and Knievel, Jason C. and James, Eric and Kosović, Branko and Gagne, David John},
-TITLE = {Machine Learning and VIIRS Satellite Retrievals for Skillful Fuel Moisture Content Monitoring in Wildfire Management},
+TITLE = {Machine Learning and {VIIRS} Satellite Retrievals for Skillful Fuel Moisture Content Monitoring in Wildfire Management},
 JOURNAL = {Remote Sensing},
 VOLUME = {15},
 YEAR = {2023},
@@ -107,12 +119,12 @@ doi = {10.3390/f11090982}
 @INPROCEEDINGS{Kang-2022-FMC,
   author={Kang, Zhenyu and Jiao, Miao and Zhou, Zijie},
   booktitle={IGARSS 2022 - 2022 IEEE International Geoscience and Remote Sensing Symposium}, 
-  title={Fuel Moisture Content Forecasting Using Long Short-Term Memory(LSTM) Model}, 
+  title={Fuel Moisture Content Forecasting Using Long Short-Term Memory({LSTM}) Model}, 
   year={2022},
   volume={},
   number={},
   pages={5672-5675},
-  keywords={Recurrent neural networks;Time series analysis;Fires;Moisture;Vegetation;Predictive models;Data models;Fuel Moisture Content (FMC);Long short-term memory(LSTM);Multivariate time series forecasting;PRISM},
+  keywords={Recurrent neural networks;Time series analysis;Fires;Moisture;Vegetation;Predictive models;Data models;Fuel Moisture Content (FMC);Long short-term memory({LSTM});Multivariate time series forecasting;PRISM},
   doi={10.1109/IGARSS46834.2022.9883168}}
 
 @article{Fan-2021-PGD,
